2006-09-07  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1553275]
	* include/wingdi.h (SetLayout): Add prototype.
	(GetLayout): Likewise.

2006-09-02  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1550139]
	* include/oleauto.h (GetRecordInfoFromTypeInfo): Add prototype.
	Tanks to:  Samit Basu <samitbasu at sf dot net>
	(GetRecordInfoFromGuids): Add prototype.

2006-09-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h: Add comment about 'missing' SEM flag.

2006-08-30  Corinna Vinschen  <corinna@vinschen.de>

	* configure.in: Substitute with_cross_host in depending files.
	* configure: Regenerate.
	* lib/Makefile.in: Add with_cross_host to allow more granular checks.
	Set installation directories accordingly.
	* lib/ddk/Makefile.in: Ditto.
	* lib/directx/Makefile.in: Ditto.

2006-08-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/wtsapi32.def (WTSGetActiveConsoleSessionId). Move from here...
	* lib/kernel32.def (WTSGetActiveConsoleSessionId). ...to here.
	Bug reported by: <macleone at users dot sf dot net> 

2006-07-29  Danny Smith  <dannysmith@users.sourceforge.net>

	Update some more IMAGE relocation type indicators
	to PECOFF v8 (May, 2006) specs.

	* include/winnt.h (IMAGE_REL_SH3_ABSOLUTE,
	IMAGE_REL_SH3_DIRECT16, IMAGE_REL_SH3_DIRECT32,
	IMAGE_REL_SH3_DIRECT8, IMAGE_REL_SH3_DIRECT8_WORD,
	IMAGE_REL_SH3_DIRECT8_LONG, IMAGE_REL_SH3_DIRECT4,
	IMAGE_REL_SH3_DIRECT4_WORD, IMAGE_REL_SH3_DIRECT4_LONG,
	IMAGE_REL_SH3_PCREL8_WORD, IMAGE_REL_SH3_PCREL8_LONG,
	IMAGE_REL_SH3_PCREL12_WORD, IMAGE_REL_SH3_STARTOF_SECTION,
	IMAGE_REL_SH3_SIZEOF_SECTION, IMAGE_REL_SH3_SECTION,
	IMAGE_REL_SH3_SECREL, IMAGE_REL_SH3_DIRECT32_NB,
	IMAGE_REL_SH3_GPREL4_LONG, IMAGE_REL_SH3_TOKEN,
	IMAGE_REL_SHM_PCRELPT, IMAGE_REL_SHM_REFLO,
	IMAGE_REL_SHM_REFHALF, IMAGE_REL_SHM_RELLO,
	IMAGE_REL_SHM_RELHALF, IMAGE_REL_SHM_PAIR,
	IMAGE_REL_SHM_NOMODE): Add defines.

	(IMAGE_REL_M32R_ABSOLUTE, IMAGE_REL_M32R_ADDR32,