@@ -154,17 +154,17 @@ extern "C" {
 #define TMT_GRADIENTCOLOR1 0x0EE2
 #define TMT_GRADIENTCOLOR2 0x0EE3
 #define TMT_GRADIENTCOLOR3 0x0EE4
-#define TMT_GRADIENTCOLOR4 0x0EE4
-#define TMT_GRADIENTCOLOR5 0x0EE5
-#define TMT_SHADOWCOLOR 0x0EE6
-#define TMT_GLOWCOLOR 0x0EE7
-#define TMT_TEXTBORDERCOLOR 0x0EE8
-#define TMT_TEXTSHADOWCOLOR 0x0EE9
-#define TMT_GLYPHTEXTCOLOR 0x0EEA
-#define TMT_GLYPHTRANSPARENTCOLOR 0x0EEB
-#define TMT_FILLCOLORHINT 0x0EEC
-#define TMT_BORDERCOLORHINT 0x0EED
-#define TMT_ACCENTCOLORHINT 0x0EEE
+#define TMT_GRADIENTCOLOR4 0x0EE5
+#define TMT_GRADIENTCOLOR5 0x0EE6
+#define TMT_SHADOWCOLOR 0x0EE7
+#define TMT_GLOWCOLOR 0x0EE8
+#define TMT_TEXTBORDERCOLOR 0x0EE9
+#define TMT_TEXTSHADOWCOLOR 0x0EEA
+#define TMT_GLYPHTEXTCOLOR 0x0EEB
+#define TMT_GLYPHTRANSPARENTCOLOR 0x0EEC
+#define TMT_FILLCOLORHINT 0x0EED
+#define TMT_BORDERCOLORHINT 0x0EEE
+#define TMT_ACCENTCOLORHINT 0x0EEF
 #define TMT_BGTYPE 0x0FA1
 #define TMT_BORDERTYPE 0x0FA2
 #define TMT_FILLTYPE 0x0FA3
